--- a/frontend/src/components/LoadingSpinner.scss
+++ b/frontend/src/components/LoadingSpinner.scss
@@ -1,10 +1,17 @@
+@use '../styles/functions';
+
+$border-thickniss: functions.to-rem(5px);
+$spinner-size: functions.to-rem(50px);
+
+$animation-duration: 1s;
+
 .loadingSpinner {
-  border: 5px solid rgba(0, 0, 0, 0.1);
-  border-top: 5px solid #3498db;
+  border: $border-thickniss solid rgba(0, 0, 0, 0.1);
+  border-top: $border-thickniss solid #3498db;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  animation: spin 1s linear infinite;
+  width: $spinner-size;
+  height: $spinner-size;
+  animation: spin $animation-duration linear infinite;
 }
 
 .loadingSpinnerWrapper {
