--- a/frontend/src/components/searchbar/TransactionsSearchbar.scss
+++ b/frontend/src/components/searchbar/TransactionsSearchbar.scss
@@ -1,8 +1,11 @@
+@use '../../styles/colors';
+@use '../../styles/fonts';
 @use '../../styles/screens';
+@use '../../styles/spaces';
 
 .searchbarLabel {
-  margin-right: 8px;
-  margin-left: 24px;
+  margin-right: spaces.$spaceS;
+  margin-left: spaces.$spaceL;
 }
 
 .searchbarLabelWrapper {
@@ -24,9 +27,10 @@
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
-  font-size: 15px;
   color: colors.$grey-500;
-  row-gap: 16px;
+  row-gap: spaces.$spaceM;
+
+  @include fonts.text-preset-3;
 
   @include screens.phone {
     justify-content: center;
