--- a/frontend/src/components/transactions/pagination/PaginationButtonPrev.scss
+++ b/frontend/src/components/transactions/pagination/PaginationButtonPrev.scss
@@ -1,53 +1,72 @@
+@use '../../../styles/colors';
+@use '../../../styles/functions';
 @use '../../../styles/screens';
+@use '../../../styles/spaces';
+
+$border-thickniss: functions.to-rem(1px);
+$custom-space-pagination-button-right-phone: functions.to-rem(1px);
+$custom-space-pagination-button-bottom: functions.to-rem(10px);
+$custom-space-pagination-button-bottom-phone: functions.to-rem(10px);
+$custom-space-pagination-button-left-phone: functions.to-rem(15px);
+
+$transition-duration: 0.3s;
+
+$caret-filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
 
 .paginationButtonPrev {
-  margin-right: 8px;
+  margin-right: spaces.$spaceS;
   border-radius: spaces.$radiusS;
-  border: 1px solid colors.$beige-500;
+  border: $border-thickniss solid colors.$beige-500;
   background-color: colors.$white-0;
-  padding: 12px 16px 10px 16px;
+  padding: spaces.$spaceMS spaces.$spaceM $custom-space-pagination-button-bottom;
   display: flex;
   flex-direction: row;
   align-items: center;
   color: colors.$grey-900;
   transition:
-          border 0.3s ease,
-          border-color 0.3s ease,
-          background-color 0.3s ease,
-          box-shadow 0.3s ease;
+          border $transition-duration ease,
+          border-color $transition-duration ease,
+          background-color $transition-duration ease,
+          box-shadow $transition-duration ease;
 
   @include screens.phone {
-    padding: 12px 1px 10px 15px;
+    padding: spaces.$spaceMS $custom-space-pagination-button-right-phone $custom-space-pagination-button-bottom-phone $custom-space-pagination-button-left-phone;
   }
-}
-.paginationButtonPrev.isEnabled:hover {
-  border: 1px solid colors.$beige-500;
-  background-color: colors.$beige-500;
-  color: colors.$white-0;
-  cursor: pointer;
 
-  .paginationButtonPrevCaret {
-    filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(300%) contrast(100%);
+  &.isEnabled {
+    &:hover {
+      border: $border-thickniss solid colors.$beige-500;
+      background-color: colors.$beige-500;
+      color: colors.$white-0;
+      cursor: pointer;
+
+      .paginationButtonPrevCaret {
+        filter: $caret-filter;
+      }
+    }
+
+    &:focus-visible {
+      border-color: colors.$beige-500;
+      outline: none;
+      box-shadow: 0 0 0 2px colors.$grey-900;
+    }
   }
- }
-.paginationButtonPrev.isEnabled:focus-visible {
-  border-color: colors.$beige-500;
-  outline: none;
-  box-shadow: 0 0 0 2px colors.$grey-900;
-}
-.paginationButtonPrev.isDisabled {
-  border: 1px solid colors.$grey-100;
-  background-color: colors.$grey-100;
-  color: colors.$grey-500;
-  cursor: not-allowed;
-}
-.paginationButtonPrev.isDisabled:focus-visible {
-  border: 1px solid colors.$component-background-light;
-  box-shadow: 0 0 0 2px colors.$component-background-light;
-  outline: none;
+
+  &.isDisabled {
+    border: $border-thickniss solid colors.$grey-100;
+    background-color: colors.$grey-100;
+    color: colors.$grey-500;
+    cursor: not-allowed;
+
+    &:focus-visible {
+      border: $border-thickniss solid colors.$component-background-light;
+      box-shadow: 0 0 0 2px colors.$component-background-light;
+      outline: none;
+    }
+  }
 }
 
 .paginationButtonPrevCaret {
-  margin-right: 16px;
-  margin-bottom: 2px;
+  margin-right: spaces.$spaceM;
+  margin-bottom: spaces.$spaceXXS;
 }
