--- a/frontend/src/components/transactions/pagination/PaginationPages.scss
+++ b/frontend/src/components/transactions/pagination/PaginationPages.scss
@@ -1,46 +1,58 @@
 @use '../../../styles/colors';
-@use '../../../styles/screens';
+@use '../../../styles/functions';
+@use '../../../styles/spaces';
+
+$border-thickniss: functions.to-rem(1px);
+$custom-space-pagination-button-bottom: functions.to-rem(10px);
+
+$transition-duration: 0.3s;
 
 .paginationPages {
   display: flex;
   flex-direction: row;
-  column-gap: 8px;
+  column-gap: spaces.$spaceS;
 }
 
 .paginationPagesButton {
   border-radius: spaces.$radiusS;
-  border: 1px solid colors.$beige-500;
+  border: $border-thickniss solid colors.$beige-500;
   background-color: colors.$white-0;
-  padding: 12px 16px 10px 16px;
+  padding: spaces.$spaceMS spaces.$spaceM $custom-space-pagination-button-bottom;
   display: flex;
   flex-direction: row;
   align-items: center;
   color: colors.$grey-900;
   transition:
-          border 0.3s ease,
-          border-color 0.3s ease,
-          background-color 0.3s ease,
-          box-shadow 0.3s ease;
-}
-.paginationPagesButton.isActive {
-  border: 1px solid colors.$grey-900;
-  box-shadow: 0 0 0 2px colors.$grey-900;
-  background-color: colors.$grey-900;
-  color: colors.$white-0;
-}
-.paginationPagesButton.isActive:focus-visible {
-  border: 1px solid colors.$component-background-light;
-  box-shadow: 0 0 0 2px colors.$component-background-light;
-  outline: none;
-}
-.paginationPagesButton.isNotActive:hover {
-  border: 1px solid colors.$beige-500;
-  background-color: colors.$beige-500;
-  color: colors.$white-0;
-  cursor: pointer;
-}
-.paginationPagesButton.isNotActive:focus-visible {
-  border-color: colors.$beige-500;
-  outline: none;
-  box-shadow: 0 0 0 2px colors.$grey-900;
+          border $transition-duration ease,
+          border-color $transition-duration ease,
+          background-color $transition-duration ease,
+          box-shadow $transition-duration ease;
+
+  &.isActive {
+    border: $border-thickniss solid colors.$grey-900;
+    box-shadow: 0 0 0 2px colors.$grey-900;
+    background-color: colors.$grey-900;
+    color: colors.$white-0;
+
+    &:focus-visible {
+      border: $border-thickniss solid colors.$component-background-light;
+      box-shadow: 0 0 0 2px colors.$component-background-light;
+      outline: none;
+    }
+  }
+
+  &.isNotActive {
+    &:hover {
+      border: $border-thickniss solid colors.$beige-500;
+      background-color: colors.$beige-500;
+      color: colors.$white-0;
+      cursor: pointer;
+    }
+
+    &:focus-visible {
+      border-color: colors.$beige-500;
+      outline: none;
+      box-shadow: 0 0 0 2px colors.$grey-900;
+    }
+  }
 }
