--- a/frontend/src/components/transactions/table/TableHeader.scss
+++ b/frontend/src/components/transactions/table/TableHeader.scss
@@ -1,10 +1,15 @@
+@use '../../../styles/colors';
+@use '../../../styles/fonts';
+@use '../../../styles/spaces';
+
 .transactionsTableHeader {
-  padding: 12px 16px 0px 16px;
+  padding: spaces.$spaceMS spaces.$spaceM 0;
   display: grid;
   grid-template-columns: calc(48% - 32px) calc(19% - 32px) calc(20% - 32px) 13%;
-  column-gap: 32px;
-  font-size: 13px;
+  column-gap: spaces.$spaceXL;
   color: colors.$grey-500;
+
+  @include fonts.text-preset-4;
 }
 
 .tableColumnAmount {
