--- a/frontend/src/components/transactions/table/TableRow.scss
+++ b/frontend/src/components/transactions/table/TableRow.scss
@@ -1,3 +1,10 @@
+@use '../../../styles/colors';
+@use '../../../styles/fonts';
+@use '../../../styles/functions';
+@use '../../../styles/spaces';
+
+$table-row-image-height: functions.to-rem(40px);
+
 .tableRowCategory {
   white-space: nowrap;
   overflow: hidden;
@@ -11,43 +18,48 @@
 }
 
 .tableRowPartnerImage {
-  margin-right: 16px;
+  margin-right: spaces.$spaceM;
   border-radius: 50%;
-  height: 40px;
+  height: $table-row-image-height;
   width: auto;
 }
 
 .tableRowPartnerName {
-  font-weight: 700;
   color: colors.$grey-900;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+
+  @include fonts.text-preset-4-bold;
 }
 
 .tableRowValue {
   display: flex;
   justify-content: flex-end;
-  font-weight: 700;
   color: colors.$grey-900;
-}
-.tableRowValue.black {
-  color: colors.$grey-900;
-}
-.tableRowValue.green {
-  color: colors.$green;
+
+  @include fonts.text-preset-4-bold;
+
+  &.black {
+    color: colors.$grey-900;
+  }
+
+  &.green {
+    color: colors.$green;
+  }
 }
 
 .transactionsTableLine {
-  margin: 12px 0;
+  margin: spaces.$spaceMS 0;
 }
 
 .transactionsTableRow {
-  padding: 0 16px;
+  padding: 0 spaces.$spaceM;
   display: grid;
   grid-template-columns: calc(48% - 32px) calc(19% - 32px) calc(20% - 32px) 13%;
-  column-gap: 32px;
+  column-gap: spaces.$spaceXL;
   align-items: center;
-  font-size: 13px;
   color: colors.$grey-500;
+
+  @include fonts.text-preset-4;
 }
