--- a/frontend/src/pages/OverviewPage.scss
+++ b/frontend/src/pages/OverviewPage.scss
@@ -1,19 +1,23 @@
+@use '../styles/functions';
 @use '../styles/screens';
+@use '../styles/spaces';
+
+$details-min-width: functions.to-rem(480px);
 
 .overviewPage {
-  padding: 32px 40px;
+  padding: spaces.$spaceXL spaces.$spaceXXL;
   width: 100%;
 
-  @include screens.phone{
-    padding: 24px 16px;
+  @include screens.phone {
+    padding: spaces.$spaceL spaces.$spaceM;
   }
 }
 
 .overviewPageDetails {
   display: grid;
-  grid-template-columns: repeat(auto-fit, (minmax(480px, 1fr)));
-  column-gap: 24px;
-  row-gap: 24px;
+  grid-template-columns: repeat(auto-fit, (minmax($details-min-width, 1fr)));
+  column-gap: spaces.$spaceL;
+  row-gap: spaces.$spaceL;
 
   @include screens.tablet-and-down {
     grid-template-columns: 1fr;
@@ -22,12 +26,12 @@
 
 .overviewPageDetailsLeft {
   display: grid;
-  grid-template-rows: repeat(2,auto);
-  row-gap: 24px;
+  grid-template-rows: repeat(2, auto);
+  row-gap: spaces.$spaceL;
 }
 
 .overviewPageDetailsRight {
   display: grid;
   grid-template-rows: fit-content(100%) auto;
-  row-gap: 24px;
+  row-gap: spaces.$spaceL;
 }
