--- a/frontend/src/pages/PotsPage.scss
+++ b/frontend/src/pages/PotsPage.scss
@@ -1,12 +1,13 @@
 @use '../styles/screens';
+@use '../styles/spaces';
 
 .potsPage {
-  padding: 32px 40px;
+  padding: spaces.$spaceXL spaces.$spaceXXL;
   display: flex;
   flex-direction: column;
-  row-gap: 32px;
+  row-gap: spaces.$spaceXL;
 
   @include screens.phone {
-    padding: 24px 16px;
+    padding: spaces.$spaceL spaces.$spaceM;
   }
 }
