--- a/frontend/src/components/CardHeader.scss
+++ b/frontend/src/components/CardHeader.scss
@@ -27,7 +27,8 @@ $icon-filter: invert(74%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(0%)
   &.yellow{
     background-color: colors.$yellow;
   }
-  .cardHeaderCircle.cyan{
+
+  &.cyan{
     background-color: colors.$cyan;
   }
 
